--- a/index1.html
+++ b/index1.html
@@ -3,7 +3,7 @@
     <title>Git 충돌 해결</title>
   </header>
   <body>
-    이름 : 
-    전화번호 :
+    이름 : Jinsuk
+    전화번호 : 010-234-5678
   </body>
 </html>
